/*
 * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
 *
 * The MIT License
 * Copyright © 2014-2022 Ilkka Seppälä
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */
// ABOUTME: ViewModel for managing book list operations with ZK framework bindings.
// ABOUTME: Handles book selection and deletion in the MVVM pattern.
package com.iluwatar.model.view.viewmodel

import org.zkoss.bind.annotation.Command
import org.zkoss.bind.annotation.NotifyChange
import org.zkoss.zk.ui.select.annotation.WireVariable

/**
 * BookViewModel class.
 */
class BookViewModel {

    @WireVariable
    private var bookList: List<Book>? = null

    var selectedBook: Book? = null
        @NotifyChange("selectedBook")
        set(value) {
            field = value
        }

    private var bookService: BookService = BookServiceImpl()

    @Suppress("UNCHECKED_CAST")
    fun getBookList(): MutableList<Book> = bookService.load() as MutableList<Book>

    /**
     * Deleting a book. When event is triggered on click of Delete button, this method will be
     * notified with the selected entry that will be referenced and used to delete the selected book
     * from the list of books.
     */
    @Command
    @NotifyChange("selectedBook", "bookList")
    fun deleteBook() {
        if (selectedBook != null) {
            getBookList().remove(selectedBook)
            selectedBook = null
        }
    }
}
