@startuml
package com.iluwatar.model.view.viewmodel {
  class Book {
    - author : String
    - name : String
    + Book(name : String, author : String)
    # canEqual(other : Object) : boolean
    + equals(o : Object) : boolean
    + getAuthor() : String
    + getName() : String
    + hashCode() : int
    + setAuthor(author : String)
    + setName(name : String)
    + toString() : String
  }
  interface BookService {
    + load() : List<Book> {abstract}
  }
  class BookServiceImpl {
    - designPatternBooks : List<Book>
    + BookServiceImpl()
    + load() : List<Book>
  }
  class BookViewModel {
    - bookList : List<Book>
    - bookService : BookService
    + BookViewModel()
    + getBookList() : List<Book>
    + load()
  }
}
BookViewModel -->  "-bookList" Book
BookViewModel -->  "-bookService" BookService
BookServiceImpl -->  "-designPatternBooks" Book
BookServiceImpl ..|> BookService 
@enduml